apps/traefik/manifests/base/namespace.yaml
---
# yamllint disable rule:line-length
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-v2
