apps/traefik/manifests/base/service.yaml
---
# yamllint disable rule:line-length
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik-v2
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik-v2
    helm.sh/chart: traefik-26.0.0
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik-v2
  ports:
    - port: 80
      name: "web"
      targetPort: web
      protocol: TCP
    - port: 443
      name: "websecure"
      targetPort: websecure
      protocol: TCP
