apps/traefik/manifests/base/ingressroute.yaml
---
# yamllint disable rule:line-length
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-v2
  annotations:
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik-v2
    helm.sh/chart: traefik-26.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  entryPoints:
    - traefik
  routes:
    - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
